--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>II-Bench</title>
+  <title>CII-Bench</title>
     <style>
         .hidden {
             display: none;
