--- a/index.html
+++ b/index.html
@@ -1006,14 +1006,14 @@
         <h2 class="title is-3">Error Analysis</h2>
         <div class="content has-text-justified">
           <p>
-            In order to perform a comprehensive error analysis of GPT-4V’s performance on II-Bench, we randomly select 100 erroneous samples from each domain, in proportion to their representation in the dataset.
-            These samples are meticulously analyzed by expert annotators.
-            GPT-4V’s errors can be categorized into the following types: Metaphorical Misunderstanding, Detail Misunderstanding, Detail Ignorance, Surface-Level Interpretation, Reasoning Error, Reject to Answer and Answer Extraction Error.
+            To conduct a comprehensive error analysis of GPT-4o's performance on CII-Bench, we randomly select a total of 100 erroneous samples from various domains, distributed according to their proportions in the dataset. 
+            These samples are subjected to in-depth analysis by expert annotators. 
+            GPT-4o's errors can be categorized into the following types: Information Neglect, Misunderstanding of Visual Information, Over-Inference, Superficial Reasoning, and Lack of Cultural Background Knowledge. 
           </p>
         </div>
         <div class="content has-text-centered">
           <img src="images/error.png" alt="error distribution" width="50%">
-          <p>GPT-4V error response distribution.</p>
+          <p>GPT-4o error response distribution.</p>
         </div>
 
         <!-- <div id="results-carousel" class="carousel results-carousel">
@@ -1041,32 +1041,32 @@
         <div id="results-carousel" class="carousel results-carousel">
           <div class="box m-5">
             <div class="content has-text-centered">
-              <img src="error/7.png" alt="grade-lv" width="60%">
+              <img src="error/case_study1.png" alt="grade-lv" width="60%">
             </div>
           </div>
           <div class="box m-5">
             <div class="content has-text-centered">
-              <img src="error/8.png" alt="grade-lv" width="60%">
+              <img src="error/case_study2.png" alt="grade-lv" width="60%">
             </div>
           </div>
           <div class="box m-5">
             <div class="content has-text-centered">
-              <img src="error/9.png" alt="grade-lv" width="60%">
+              <img src="error/case_study3.png" alt="grade-lv" width="60%">
             </div>
           </div>
           <div class="box m-5">
             <div class="content has-text-centered">
-              <img src="error/10.png" alt="grade-lv" width="60%">
+              <img src="error/case_study4.png" alt="grade-lv" width="60%">
             </div>
           </div>
           <div class="box m-5">
             <div class="content has-text-centered">
-              <img src="error/11.png" alt="grade-lv" width="60%">
+              <img src="error/case_study5.png" alt="grade-lv" width="60%">
             </div>
           </div>
           <div class="box m-5">
             <div class="content has-text-centered">
-              <img src="error/12.png" alt="grade-lv" width="60%">
+              <img src="error/case_study6.png" alt="grade-lv" width="60%">
             </div>
           </div>
           
