--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <!--  <script src="./data/results/model_scores.js" defer></script>-->
 <!--  <script src="./visualizer/data/data_public.js" defer></script>-->
 </head>
-<body class="II-Bench-container">
+<body class="CII-Bench-container">
 
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
@@ -187,7 +187,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://huggingface.co/datasets/m-a-p/II-Bench" class="external-link button is-normal is-rounded">
+                <a href="https://huggingface.co/datasets/m-a-p/CII-Bench" class="external-link button is-normal is-rounded">
                   <span class="icon">
                       <!-- <i class="far fa-images"></i> -->
                       <p style="font-size:18px">🤗</p>
@@ -280,7 +280,7 @@
       <!-- <div class="box m-5"> -->
         <div class="content has-text-centered">
           <img src="images/composition.jpg" alt="geometric reasoning" width="40%">
-          <p> Overview of II-Bench: II-Bench comprises 1,222 images, spanning six domains: life, art, society, psychology, environment and others.</p>
+          <p> Overview of CII-Bench: II-Bench comprises 698 images, spanning six domains: Life, Art, Society, Politics, Environment, and Chinese Traditional Culture.</p>
         </div>
       <!-- </div> -->
     </div>
@@ -327,7 +327,7 @@
   <div class="hero-body has-text-centered">
   <h1 class="title is-1 mmmu">
     <img src="images/logo.png" style="width:1em;vertical-align: middle" alt="Logo">
-    <span class="mmmu" style="vertical-align: middle">II-Benchmark</span>
+    <span class="mmmu" style="vertical-align: middle">CII-Benchmark</span>
   </h1>
   </div>
 </section>
@@ -351,7 +351,7 @@
             We introduce the <b>I</b>mage <b>I</b>mplication Understanding <b>Bench</b>mark <b>II-Bench</b>, a new benchmark measuring the higher-order perceptual, reasoning and comprehension abilities of MLLMs when presented with complex implication images.
             These images, including abstract artworks, comics and posters, possess visual implications that require an understanding of visual details and reasoning ability.
             II-Bench reveals whether current MLLMs, leveraging their inherent comprehension abilities, can accurately decode the metaphors embedded within the complex and abstract information presented in these images.
-            <img src="images/II-bench-sample.jpg" alt="algebraic reasoning" class="center">
+            <img src="images/CII-Bench-sample.jpg" alt="algebraic reasoning" class="center">
           <br>
           </p><p>
             II-Bench contains a total of 1,222 various images.
@@ -393,20 +393,20 @@
         <div id="results-carousel" class="carousel results-carousel">
           <div class="box m-5">
             <div class="content has-text-centered">
-              <img src="images/II-bench-type.png" alt="algebraic reasoning" width="90%">
-              <p> II-Bench specific image type and domain statistics.</p>
+              <img src="images/CII-Bench-type.png" alt="algebraic reasoning" width="90%">
+              <p> CII-Bench specific image type and domain statistics.</p>
             </div>
           </div>
           <div class="box m-5">
             <div class="content has-text-centered">
-              <img src="images/statics.png" alt="arithmetic reasoning" width="90%">
-              <p> Key statistics of the II-Bench benchmark</p>
+              <img src="images/statistics.png" alt="arithmetic reasoning" width="90%">
+              <p> Key statistics of the CII-Bench benchmark</p>
             </div>
           </div>
 <!--          <div class="box m-5">-->
 <!--            <div class="content has-text-centered">-->
 <!--              <img src="c_static/images/image_type_count.jpg" alt="arithmetic reasoning" width="95%"/>-->
-<!--              <p> Distribution of image types in the II-Bench dataset</p>-->
+<!--              <p> Distribution of image types in the CII-Bench dataset</p>-->
 <!--            </div>-->
 <!--          </div>-->
         </div>
