--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
     </div> -->
       <!-- <div class="box m-5"> -->
         <div class="content has-text-centered">
-          <img src="images/composition.jpg" alt="geometric reasoning" width="40%">
+          <img src="images/composition.jpg" alt="composition" width="40%">
           <p> Overview of CII-Bench: II-Bench comprises 698 images, spanning six domains: Life, Art, Society, Politics, Environment, and Chinese Traditional Culture.</p>
         </div>
       <!-- </div> -->
@@ -351,7 +351,7 @@
             We introduce the <b>I</b>mage <b>I</b>mplication Understanding <b>Bench</b>mark <b>II-Bench</b>, a new benchmark measuring the higher-order perceptual, reasoning and comprehension abilities of MLLMs when presented with complex implication images.
             These images, including abstract artworks, comics and posters, possess visual implications that require an understanding of visual details and reasoning ability.
             II-Bench reveals whether current MLLMs, leveraging their inherent comprehension abilities, can accurately decode the metaphors embedded within the complex and abstract information presented in these images.
-            <img src="images/CII-Bench-sample.jpg" alt="algebraic reasoning" class="center">
+            <img src="images/CII-Bench-sample.jpg" alt="CII-Bench-sample" class="center">
           <br>
           </p><p>
             II-Bench contains a total of 1,222 various images.
@@ -393,13 +393,13 @@
         <div id="results-carousel" class="carousel results-carousel">
           <div class="box m-5">
             <div class="content has-text-centered">
-              <img src="images/CII-Bench-type.png" alt="algebraic reasoning" width="90%">
+              <img src="images/CII-Bench-type.png" alt="CII-Bench-type" width="80%">
               <p> CII-Bench specific image type and domain statistics.</p>
             </div>
           </div>
           <div class="box m-5">
             <div class="content has-text-centered">
-              <img src="images/statistics.png" alt="arithmetic reasoning" width="90%">
+              <img src="images/statistics.png" alt="arithmetic reasoning" width="70%">
               <p> Key statistics of the CII-Bench benchmark</p>
             </div>
           </div>
