--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
     </div> -->
       <!-- <div class="box m-5"> -->
         <div class="content has-text-centered">
-          <img src="images/composition.png" alt="composition" width="35%" class="center">
+          <img src="images/composition.png" alt="composition" width="30%">
           <p> Overview of CII-Bench: CII-Bench comprises 698 images, spanning six domains: Life, Art, Society, Politics, Environment, and Chinese Traditional Culture.</p>
         </div>
       <!-- </div> -->
@@ -343,7 +343,7 @@
             We introduce the <b>C</b>hinese <b>I</b>mage <b>I</b>mplication Understanding <b>Bench</b>mark <b>CII-Bench</b>, a new benchmark measuring the higher-order perceptual, reasoning and comprehension abilities of MLLMs when presented with complex Chinese implication images.
             These images, including abstract artworks, comics and posters, possess visual implications that require an understanding of visual details and reasoning ability.
             CII-Bench reveals whether current MLLMs, leveraging their inherent comprehension abilities, can accurately decode the metaphors embedded within the complex and abstract information presented in these images.
-            <img src="images/CII-Bench-sample.png" alt="CII-Bench-sample" width="90%" class="center">
+            <img src="images/CII-Bench-sample.png" alt="CII-Bench-sample" class="center">
           <br>
           </p><p>
             CII-Bench contains a total of 698 various Chinese images.
@@ -401,7 +401,7 @@
 
 
 
-<!-------------------------------------------------------------------- RESULTS SECTION -------------------------------------------------------------------->
+------------------------------------------------------------------ RESULTS SECTION ------------------------------------------------------------------
     <div class="columns is-centered m-6">
       <div class="column is-full has-text-centered content">
         <h2 class="title is-3" id="leaderboard">Leaderboard</h2>
@@ -420,8 +420,6 @@
           </div>
 
           <div class="model-labels-container">
-<!--            <span class="leaderboard-label" style="background-color: #f8fffe;">Open-Source</span>-->
-<!--            <span class="leaderboard-label" style="background-color: #f9f2f8;">Closed</span>-->
 
             <span class="leaderboard-label" style="background-color: #def9cb;">Closed-Source</span>
             <span class="leaderboard-label" style="background-color: #e4efdc;">Open-Source</span>
@@ -436,12 +434,12 @@
               <td class="js-sort-number"><strong>Life</strong></td>
               <td class="js-sort-number"><strong>Art</strong></td>
               <td class="js-sort-number"><strong>Society</strong></td>
-              <td class="js-sort-number"><strong>Psychology</strong></td>
+              <td class="js-sort-number"><strong>Politics</strong></td>
               <td class="js-sort-number"><strong>Environment</strong></td>
-              <td class="js-sort-number"><strong>Others</strong></td>
+              <td class="js-sort-number"><strong>Chinese Traditional Culture</strong></td>
               <td class="js-sort-number"><strong>Positive</strong></td>
-              <td class="js-sort-number"><strong>Neutral</strong></td>
               <td class="js-sort-number"><strong>Negative</strong></td>
+              <td class="js-sort-number"><strong>Neutral</strong></td>
             </tr>
 
             <tr style="background-color: #def9cb;">
@@ -789,129 +787,91 @@
               </tr>
 
 
+              <tr style="background-color: #f9f2f8;"></tr>
+                <td style="text-align: left;">
+                        <b> Llama-3-8B-Instruct </b>
+                </td>
+                <td>21.7</td>
+                <td>22.2</td>
+                <td>26.9</td>
+                <td>18.6</td>
+                <td><u>25.0</u></td>
+                <td>27.8</td>
+                <td><u>20.4</u></td>
+                <td>21.2</td>
+                <td><u>24.4</u></td>
+                <td>19.5</td>
+              </tr>  
+              <tr style="background-color: #f9f2f8;"></tr>
+                <td style="text-align: left;">
+                        <b> DeepSeek-67B-Chat </b>
+                </td>
+                <td><u>27.1</u></td>
+                <td><u>26.6</td>
+                <td><u>32.7</td>
+                <td><b>30.9</b></td>
+                <td>20.0</td>
+                <td><u>35.2</u></td>
+                <td>18.2</td>
+                <td><u>25.7</u></td>
+                <td>22.2</td>
+                <td><u>33.2</u></td>
+              </tr>  
+              <tr style="background-color: #f9f2f8;"></tr>
+                <td style="text-align: left;">  
+                      <b> Qwen2-7B-Instruct </b>
+                </td>
+                <td><b>32.5</b></td>
+                <td><b>33.2</td>
+                <td><b>34.6</b></td>
+                <td><b>30.9</b></td>
+                <td><b>35.0</b></td>
+                <td><b>40.7</b></td>
+                <td><b>28.5</b></td>
+                <td><b>33.6</b></td>
+                <td><b>30.4</b></td>
+                <td><b>33.6</b></td>
+              </tr>  
+
               <tr style="background-color: #e0ebf3;">
                 <td style="text-align: left;">
                         <b> Human_avg </b>
                 </td>
-              <td> 90.3 </td>
-                <td> 90.0 </td>
-
-              <td> 88.2 </td>
-              <td> 91.4 </td>
-              <td> 86.6 </td>
-              <td> 96.1 </td>
-              <td> 92.3 </td>
-              <td> 84.7 </td>
-                <td> 89.1 </td>
-                <td> 92.2 </td>
+                <td>78.2</td>
+                <td>81.0</td>
+                <td>67.7</td>
+                <td>82.7</td>
+                <td>87.7</td>
+                <td>84.0</td>
+                <td>65.9</td>
+                <td>77.9</td>
+                <td>75.2</td>
+                <td>81.6</td>
               </tr>
               <tr style="background-color: #e0ebf3;">
                   <td style="text-align: left;">
                           <b> Human_best </b>
                   </td>
-              <td> <b>98.2</b> </td>
-                  <td> <b>97.9</b> </td>
-
-              <td> <b>98.8</b> </td>
-              <td> <b>98.3</b> </td>
-              <td> <b>97.4</b> </td>
-              <td> <b>100.0</b> </td>
-              <td> <b>100.0</b> </td>
-              <td> <b>98.0</b> </td>
-                <td> <b>98.0</b> </td>
-                <td> <b>98.8</b> </td>
+                  <td><b>81.0</b></td>
+                  <td><b>83.2</b></td>
+                  <td><b>73.6</b></td>
+                  <td><b>87.2</b></td>
+                  <td><b>89.5</b></td>
+                  <td><b>86.0</b></td>
+                  <td><b>66.7</b></td>
+                  <td><b>78.2</b></td>
+                  <td><b>78.8</b></td>
+                  <td><b>83.3</b></td>
               </tr>
-            <!-- <tr>
-              <td colspan="8" style="font-size: 18px;"><b>Large Language Models (LLMs): Only Text as Input</b></td>
-            </tr>               -->
-            <!-- <tr style="background-color: #f8fffe;">
-              <td style="text-align: left;"><b>Llama2 7B</b></td>
-              <td>28.7</td>
-              <td>30.7</td>
-              <td>27.2</td>
-              <td>26.7</td>
-              <td>27.7</td>
-              <td>32.6</td>
-              <td>29.8</td>
-            </tr>
-            <tr style="background-color: #f4fdf5;">
-              <td style="text-align: left;"><b>FLAN-T5-XXL</b></td>
-              <td><b>31.2</b></td>
-              <td>36.8</td>
-              <td><b>28.9</b></td>
-              <td>26.7</td>
-              <td>32.8</td>
-              <td><b>44.8</b></td>
-              <td><b>28.3</b></td>
-            </tr>
-            <tr style="background-color: #f4fdf5;">
-              <td style="text-align: left;"><b>FLAN-T5-XXL + OCR</b></td>
-              <td><b>31.9</b></td>
-              <td>36.2</td>
-              <td>28.8</td>
-              <td>26.2</td>
-              <td>32.6</td>
-              <td><b>50.5</b></td>
-              <td><b>29.7</b></td>
-            </tr>
-            <tr style="background-color: #f4fdf5;">
-              <td style="text-align: left;"><b>FLAN-T5-XXL + LLaVA Caption</b></td>
-              <td><b>31.9</b></td>
-              <td><b>38.4</b></td>
-              <td>27.8</td>
-              <td><b>27.0</b></td>
-              <td><b>33.2</b></td>
-              <td>49.9</td>
-              <td>28.7</td>
-            </tr>
-            <tr style="background-color: #e7fde9;">
-              <td style="text-align: left;"><b>Vicuna-13B</b></td>
-              <td>31.0</td>
-              <td>35.1</td>
-              <td><b>30.1</b></td>
-              <td>24.7</td>
-              <td>31.4</td>
-              <td>44.8</td>
-              <td>30.1</td>
-            </tr>
-            <tr style="background-color: #e7fde9;">
-              <td style="text-align: left;"><b>Vicuna-13B + OCR</b></td>
-              <td>31.9</td>
-              <td>37.1</td>
-              <td>28.6</td>
-              <td><b>26.5</b></td>
-              <td>32.0</td>
-              <td>49.3</td>
-              <td>30.0</td>
-            </tr>
-            <tr style="background-color: #e7fde9;">
-              <td style="text-align: left;"><b>Vicuna-13B + LLaVA Caption</b></td>
-              <td><b>32.7</b></td>
-              <td><b>42.0</b></td>
-              <td>26.8</td>
-              <td>26.2</td>
-              <td><b>33.4</b></td>
-              <td><b>49.4</b></td>
-              <td><b>31.4</b></td>
-            </tr> -->
-            <!-- <tr style="background-color: #f8fffe;">
-              <td style="text-align: left;"><b>GPT-4 Text</b></td>
-              <td>33.8</td>
-              <td>32.9</td>
-              <td>28.5</td>
-              <td>30.6</td>
-              <td>41.3</td>
-              <td>53.0</td>
-              <td>28.4</td>
-            </tr> -->
           </tbody></table>
 
-            <p> Overall results of different MLLMs and humans on different domains and emotions. The
+            <p> Overall results of different MLLMs, LLMs and humans on different domains and emotions. The
                 best-performing model in each category is <b>in-bold</b>, and the second best is <u>underlined</u>.
             </p>
         </div>
       </div>
     </div>
+
 <!-------------------------------------------------------------------- prompt skills -------------------------------------------------------------------->
 <div class="columns is-centered m-6">
   <div class="column is-full has-text-centered content">
