--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             We introduce the <b>C</b>hinese <b>I</b>mage <b>I</b>mplication Understanding <b>Bench</b>mark <b>CII-Bench</b>, a new benchmark measuring the higher-order perceptual, reasoning and comprehension abilities of MLLMs when presented with complex Chinese implication images.
             These images, including abstract artworks, comics and posters, possess visual implications that require an understanding of visual details and reasoning ability.
             CII-Bench reveals whether current MLLMs, leveraging their inherent comprehension abilities, can accurately decode the metaphors embedded within the complex and abstract information presented in these images.
-            <img src="images/CII-Bench-sample.png" alt="CII-Bench-sample" width="85%">
+            <img src="images/CII-Bench-sample.png" alt="CII-Bench-sample"  width="75%" class="center">
           <br>
           </p><p>
             CII-Bench contains a total of 698 various Chinese images.
@@ -368,7 +368,7 @@
           </div>
           <div class="box m-5">
             <div class="content has-text-centered">
-              <img src="images/statistics.png" alt="statistics" width="85%">
+              <img src="images/statistics.png" alt="statistics" width="90%">
               <p> Key statistics of the CII-Bench benchmark</p>
             </div>
           </div>
